crates/ty_python_semantic/resources/mdtest/snapshots/liskov.md_-_The_Liskov_Substitut…_-_The_entire_class_hie…_(5e8fca10d966c36e).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: liskov.md - The Liskov Substitution Principle - The entire class hierarchy is checked
mdtest path: crates/ty_python_semantic/resources/mdtest/liskov.md
---

# Python source files

## stub.pyi

```
 1 | class Grandparent:
 2 |     def method(self, x: int) -> None: ...
 3 | 
 4 | class Parent(Grandparent):
 5 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
 6 | 
 7 | class Child(Parent):
 8 |     # compatible with the signature of `Parent.method`, but not with `Grandparent.method`:
 9 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
10 | 
11 | class OtherChild(Parent):
12 |     # compatible with the signature of `Grandparent.method`, but not with `Parent.method`:
13 |     def method(self, x: int) -> None: ...  # error: [invalid-method-override]
```

## other_stub.pyi

```
 1 | class A:
 2 |     def get(self, default): ...
 3 | 
 4 | class B(A):
 5 |     def get(self, default, /): ...  # error: [invalid-method-override]
 6 | 
 7 | get = 56
 8 | 
 9 | class C(B):
10 |     # `get` appears in the symbol table of `C`,
11 |     # but that doesn't confuse our diagnostic...
12 |     foo = get
13 | 
14 | class D(C):
15 |     # compatible with `C.get` and `B.get`, but not with `A.get`
16 |     def get(self, my_default): ...  # error: [invalid-method-override]
```

# Diagnostics

```
error[invalid-method-override]: Invalid override of method `method`
 --> src/stub.pyi:2:9
  |
1 | class Grandparent:
2 |     def method(self, x: int) -> None: ...
  |         ---------------------------- `Grandparent.method` defined here
3 |
4 | class Parent(Grandparent):
5 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Grandparent.method`
6 |
7 | class Child(Parent):
  |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/stub.pyi:9:9
   |
 7 | class Child(Parent):
 8 |     # compatible with the signature of `Parent.method`, but not with `Grandparent.method`:
 9 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Grandparent.method`
10 |
11 | class OtherChild(Parent):
   |
  ::: src/stub.pyi:2:9
   |
 1 | class Grandparent:
 2 |     def method(self, x: int) -> None: ...
   |         ---------------------------- `Grandparent.method` defined here
 3 |
 4 | class Parent(Grandparent):
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `method`
  --> src/stub.pyi:13:9
   |
11 | class OtherChild(Parent):
12 |     # compatible with the signature of `Grandparent.method`, but not with `Parent.method`:
13 |     def method(self, x: int) -> None: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Parent.method`
   |
  ::: src/stub.pyi:5:9
   |
 4 | class Parent(Grandparent):
 5 |     def method(self, x: str) -> None: ...  # error: [invalid-method-override]
   |         ---------------------------- `Parent.method` defined here
 6 |
 7 | class Child(Parent):
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `get`
 --> src/other_stub.pyi:2:9
  |
1 | class A:
2 |     def get(self, default): ...
  |         ------------------ `A.get` defined here
3 |
4 | class B(A):
5 |     def get(self, default, /): ...  # error: [invalid-method-override]
  |         ^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `A.get`
6 |
7 | get = 56
  |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `get`
  --> src/other_stub.pyi:16:9
   |
14 | class D(C):
15 |     # compatible with `C.get` and `B.get`, but not with `A.get`
16 |     def get(self, my_default): ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `A.get`
   |
  ::: src/other_stub.pyi:2:9
   |
 1 | class A:
 2 |     def get(self, default): ...
   |         ------------------ `A.get` defined here
 3 |
 4 | class B(A):
   |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```
